[gd_scene load_steps=12 format=2]

[ext_resource path="res://font/PMingLiU.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scences/text_edit/Button_1.tres" type="Theme" id=2]
[ext_resource path="res://scences/text_edit/text_editor.gd" type="Script" id=3]
[ext_resource path="res://scences/text_edit/open_file.tscn" type="PackedScene" id=4]
[ext_resource path="res://scences/text_edit/save_as_file.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[sub_resource type="Theme" id=6]
TextEdit/colors/background_color = Color( 0, 0, 0, 0 )
TextEdit/colors/bookmark_color = Color( 0.08, 0.49, 0.98, 1 )
TextEdit/colors/brace_mismatch_color = Color( 1, 0.2, 0.2, 1 )
TextEdit/colors/breakpoint_color = Color( 0.8, 0.8, 0.4, 0.2 )
TextEdit/colors/caret_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/code_folding_color = Color( 0.8, 0.8, 0.8, 0.8 )
TextEdit/colors/completion_background_color = Color( 0.17, 0.16, 0.2, 1 )
TextEdit/colors/completion_existing_color = Color( 0.87, 0.87, 0.87, 0.13 )
TextEdit/colors/completion_font_color = Color( 0.67, 0.67, 0.67, 1 )
TextEdit/colors/completion_scroll_color = Color( 1, 1, 1, 1 )
TextEdit/colors/completion_selected_color = Color( 0.26, 0.26, 0.27, 1 )
TextEdit/colors/current_line_color = Color( 0.25, 0.25, 0.26, 0.8 )
TextEdit/colors/executing_line_color = Color( 0.2, 0.8, 0.2, 0.4 )
TextEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/font_color_readonly = Color( 0.88, 0.88, 0.88, 0.5 )
TextEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
TextEdit/colors/function_color = Color( 0.4, 0.64, 0.81, 1 )
TextEdit/colors/line_number_color = Color( 0.67, 0.67, 0.67, 0.4 )
TextEdit/colors/mark_color = Color( 1, 0.4, 0.4, 0.4 )
TextEdit/colors/member_variable_color = Color( 0.9, 0.31, 0.35, 1 )
TextEdit/colors/number_color = Color( 0.92, 0.58, 0.2, 1 )
TextEdit/colors/safe_line_number_color = Color( 0.67, 0.78, 0.67, 0.6 )
TextEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
TextEdit/colors/symbol_color = Color( 0.94, 0.94, 0.94, 1 )
TextEdit/colors/word_highlighted_color = Color( 0.8, 0.9, 0.9, 0.15 )
TextEdit/constants/completion_lines = 7
TextEdit/constants/completion_max_width = 50
TextEdit/constants/completion_scroll_width = 3
TextEdit/constants/line_spacing = 8
TextEdit/fonts/font = null
TextEdit/icons/fold = null
TextEdit/icons/folded = null
TextEdit/icons/space = null
TextEdit/icons/tab = null
TextEdit/styles/completion = SubResource( 3 )
TextEdit/styles/focus = SubResource( 4 )
TextEdit/styles/normal = SubResource( 5 )
TextEdit/styles/read_only = null

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[node name="text_editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="Panel/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 13.0
margin_right = 1920.0
margin_bottom = 30.0

[node name="VSeparator" type="VSeparator" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 8.0
margin_bottom = 17.0
custom_styles/separator = SubResource( 1 )

[node name="new" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 16.0
margin_right = 48.0
margin_bottom = 17.0
theme = ExtResource( 2 )
text = "新建"

[node name="open" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 88.0
margin_bottom = 17.0
theme = ExtResource( 2 )
text = "打开"

[node name="open_file" parent="Panel/VBoxContainer/HBoxContainer/open" instance=ExtResource( 4 )]

[node name="save" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 17.0
theme = ExtResource( 2 )
text = "储存"

[node name="save_as" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 168.0
margin_bottom = 17.0
theme = ExtResource( 2 )
text = "另存"

[node name="save_as_file" parent="Panel/VBoxContainer/HBoxContainer/save_as" instance=ExtResource( 5 )]

[node name="back" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 176.0
margin_right = 208.0
margin_bottom = 17.0
theme = ExtResource( 2 )
text = "返回"

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer"]
margin_top = 38.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1900, 1010 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="Panel/VBoxContainer/CenterContainer"]
margin_left = 260.0
margin_top = 71.0
margin_right = 1660.0
margin_bottom = 971.0
rect_min_size = Vector2( 1400, 900 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
syntax_highlighting = true
wrap_enabled = true
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/save_as" to="." method="_on_save_as_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/back" to="." method="_on_back_pressed"]
